tests/error/class-26.moc
@class NSObject {
}
+(id)init {}
@end

@class Point : NSObject {
    int x;
    int y;
}
@end

void main() {
}
